--- a/book.html
+++ b/book.html
@@ -573,25 +573,23 @@
       .btn{ padding: 12px 16px; }
       .origin-card, .summary-card{ padding: 26px 16px; }
       .modal-body{ padding: 18px 14px 22px; }
+      
     }
   </style>
 </head>
 
 <body>
-  <div class="page-frame">
+<!-- PATCH WORLD TOP NAV -->
+<div class="top-nav">...</div>
 
-    <!-- GLOBAL TOP HEADER / TABS -->
-    <nav class="top-nav" aria-label="EPÒK Top Navigation">
-      <div class="top-nav-inner">
-        <div class="brand-mark">EPÒK</div>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="book.html">Book</a></li>
-          <li><a href="#book-preview">Preview</a></li>
-          <li><a href="shop.html">Shop</a></li>
-        </ul>
-      </div>
-    </nav>
+<!-- PATCH WORLD BORDER FRAME -->
+<div class="page-frame-outer">
+  <div class="arabic-border">
+    <span>قَ على قيد الحياة. انهض. كن. ادخل إلى عالم إيبوك الخاص بك • ...</span>
+  </div>
+</div>
+  
+  <div class="page-frame">
 
     <!-- SECTION 1 — BOOK HERO -->
     <section class="hero" id="top">
