--- a/book.html
+++ b/book.html
@@ -36,59 +36,12 @@
 
     /* ===== GLOBAL BORDER SYSTEM ===== */
     .page-frame{
+      position: relative;
+      z-index: 1;
       border: 2px solid var(--goldSoft);
       margin: 18px;
-      padding: 16px 16px 26px;
-    }
-
-    /* ===== TOP HEADER / NAV (GLOBAL) ===== */
-    .top-nav{
-      position: sticky;
-      top: 0;
-      z-index: 999;
-      background: rgba(0,0,0,0.92);
-      border-bottom: 1px solid var(--goldFaint);
-      backdrop-filter: blur(8px);
-    }
-    .top-nav-inner{
-      max-width: 1280px;
-      margin: 0 auto;
-      padding: 14px 18px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 14px;
-    }
-    .brand-mark{
-      font-weight: 800;
-      letter-spacing: 0.30em;
-      text-transform: uppercase;
-      color: rgba(243,214,136,0.95);
-      font-size: 0.85rem;
-      white-space: nowrap;
-    }
-    .nav-links{
-      display:flex;
-      align-items:center;
-      gap: 22px;
-      list-style:none;
-      font-size: 0.70rem;
-      letter-spacing: 0.26em;
-      text-transform: uppercase;
-      color: rgba(245,245,245,0.86);
-      flex-wrap: wrap;
-      justify-content: flex-end;
-    }
-    .nav-links a{
-      padding: 8px 10px;
-      border: 1px solid transparent;
-      border-radius: 999px;
-      transition: 160ms ease;
-    }
-    .nav-links a:hover{
-      border-color: var(--goldFaint);
-      background: rgba(212,175,55,0.08);
-      color: rgba(243,214,136,0.98);
+      padding: 90px 16px 26px;
+}
     }
 
     /* ===== SECTION BASE ===== */
@@ -575,12 +528,139 @@
       .modal-body{ padding: 18px 14px 22px; }
       
     }
+    .page-frame-outer {
+    position: fixed;
+    inset: 0;
+    padding: 22px;
+    border: 2px solid rgba(212,175,55,0.65);
+    pointer-events: none;
+    z-index: 50;
+}
+    
+.page-frame-outer::before,
+.page-frame-outer::after {
+    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
+    position:absolute;
+    top:22px;
+    bottom:22px;
+    width:22px;
+    writing-mode:vertical-rl;
+    font-size:0.65rem;
+    letter-spacing:0.35em;
+    color:#ffffff;
+    white-space:nowrap;
+}
+
+.page-frame-outer::before {
+    left:1px;
+    animation:leftScroll 45s linear infinite;
+}
+
+.page-frame-outer::after {
+    right:9px;
+    animation:rightScroll 45s linear infinite;
+}
+
+    @keyframes leftScroll {
+    from { transform:translateY(100%); }
+    to { transform:translateY(-100%); }
+}
+
+@keyframes rightScroll {
+    from { transform:translateY(-100%); }
+    to { transform:translateY(100%); }
+}
+
+  .arabic-border {
+    position:absolute;
+    bottom:6px;
+    left:0;
+    right:0;
+    font-size:0.7rem;
+    letter-spacing:0.45em;
+    color:#ffffff;
+    white-space:nowrap;
+    overflow:hidden;
+    text-align:center;
+}
+
+.arabic-border span {
+    display:inline-block;
+    padding-left:100%;
+    animation:arabic-scroll 18s linear infinite;
+}
+  @keyframes arabic-scroll {
+    from { transform:translateX(0); }
+    to { transform:translateX(-100%); }
+}
+.top-nav {
+    position:fixed;
+    top:22px;
+    left:22px;
+    right:22px;
+    z-index:40;
+    pointer-events:auto;
+}
+
+.nav-scroll {
+    width:100%;
+    overflow-x:auto;
+    overflow-y:hidden;
+    -webkit-overflow-scrolling:touch;
+    white-space:nowrap;
+    padding:10px 12px;
+}
+
+.nav-scroll::-webkit-scrollbar { height:0px; }
+.nav-scroll { scrollbar-width:none; }
+
+.nav-list {
+    display:inline-flex;
+    gap:18px;
+    align-items:center;
+    flex-wrap:nowrap;
+}
+
+.nav-list a {
+    display:inline-block;
+    color:#ffffff;
+    text-decoration:none;
+    font-size:0.75rem;
+    letter-spacing:0.28em;
+    opacity:0.78;
+    transition:opacity .25s ease;
+    padding:6px 4px;
+}
+
+.nav-list a:hover { opacity:1; }
+
+.nav-list a.featured {
+    opacity:1;
+    border:1px solid rgba(212,175,55,0.85);
+    padding:7px 10px;
+}
+
   </style>
 </head>
 
 <body>
+ <div class="page-frame"> 
 <!-- PATCH WORLD TOP NAV -->
-<div class="top-nav">...</div>
+<div class="top-nav">
+  <div class="nav-scroll">
+    <div class="nav-list">
+      <a href="index.html">HOME</a>
+      <a href="movement.html">MOVEMENT</a>
+      <a href="patchbaby.html">PATCH BABY</a>
+      <a href="book.html">BOOK</a>
+      <a href="store.html">STORE</a>
+      <a href="about.html">ABOUT</a>
+      <a href="music.html">MUSIC</a>
+      <a class="featured" href="signature-apparel-premiere.html">SIGNATURE APPAREL PREMIERE</a>
+    </div>
+  </div>
+</div>
+
 
 <!-- PATCH WORLD BORDER FRAME -->
 <div class="page-frame-outer">
@@ -589,7 +669,7 @@
   </div>
 </div>
   
-  <div class="page-frame">
+  <div>
 
     <!-- SECTION 1 — BOOK HERO -->
     <section class="hero" id="top">
@@ -922,6 +1002,7 @@
   </div>
 
   <script>
+    </div>
     /* ===== Utility: encode spaces safely in filenames ===== */
     function safeSrc(path){
       // preserves special chars but encodes spaces
