--- a/book.html
+++ b/book.html
@@ -529,7 +529,7 @@
       
     }
     .page-frame-outer {
-    position: fixed;
+    position: absolute;
     inset: 0;
     padding: 22px;
     border: 2px solid rgba(212,175,55,0.65);
@@ -594,7 +594,7 @@
     to { transform:translateX(-100%); }
 }
 .top-nav {
-    position:fixed;
+    position:absolute;
     top:22px;
     left:22px;
     right:22px;
@@ -872,7 +872,7 @@
         </div>
 
         <div class="reader-view">
-          <img id="readerImg" src="" alt="Preview page" />
+          <img id="readerImg" src="bookart/thebookcover.png" alt="Preview page" />
         </div>
 
         <div class="reader-bottom">
