--- a/book.html
+++ b/book.html
@@ -288,6 +288,7 @@
       border-bottom: 1px solid rgba(212,175,55,0.16);
       background: rgba(0,0,0,0.55);
       flex-wrap: wrap;
+
     }
     .reader-title{
       text-transform: uppercase;
@@ -339,7 +340,9 @@
       align-items:center;
     }
     .reader-view img{
-      width: 100%;
+      width: 85%;
+      max-height: 70vh;
+
       border-radius: 10px;
       border: 1px solid rgba(212,175,55,0.18);
       box-shadow: 0 34px 120px rgba(0,0,0,0.82);
@@ -639,6 +642,19 @@
     border:1px solid rgba(212,175,55,0.85);
     padding:7px 10px;
 }
+/* FULLSCREEN PREVIEW */
+.reader.fullscreen {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  background: #000;
+}
+
+.reader.fullscreen .reader-view img{
+  width: 100%;
+  height: 100vh;
+  object-fit: contain;
+}
 
   </style>
 </head>
@@ -863,6 +879,7 @@
 
       <div class="reader" aria-label="Book preview reader">
         <div class="reader-top">
+          <div class="reader-exit-hint">DOUBLE TAP TO EXIT</div>
           <div class="reader-title">Panthers &amp; Vampires: Blue Moon — Preview</div>
           <div class="reader-controls">
             <button class="reader-btn" id="prevBtn" type="button">Previous</button>
@@ -873,6 +890,10 @@
 
         <div class="reader-view">
           <img id="readerImg" src="bookart/thebookcover.png" alt="Preview page" />
+          <div style="margin-top:10px;font-size:0.7rem;letter-spacing:0.2em;opacity:0.7;">
+          TAP / CLICK TO PREVIEW
+            </div>
+
         </div>
 
         <div class="reader-bottom">
@@ -1068,6 +1089,29 @@
     ];
 
     const readerImg = document.getElementById('readerImg');
+    const reader = document.querySelector('.reader');
+    
+readerImg.addEventListener('click', () => {
+  if (window.innerWidth <= 768) {
+    reader.classList.add('fullscreen');
+  }
+
+  if (idx < pages.length - 1) {
+    idx++;
+  } else {
+    idx = 0;
+  }
+  render();
+});
+
+readerImg.addEventListener('touchend', () => {
+  const now = Date.now();
+  if (now - lastTap < 300) {
+    document.querySelector('.reader').classList.toggle('fullscreen');
+  }
+  lastTap = now;
+});
+
     const prevBtn = document.getElementById('prevBtn');
     const nextBtn = document.getElementById('nextBtn');
     const pageCount = document.getElementById('pageCount');
