--- a/book.html
+++ b/book.html
@@ -1092,6 +1092,7 @@
   </div>
 
   <script>
+    document.addEventListener('DOMContentLoaded', () => {
     /* ===== Utility: encode spaces safely in filenames ===== */
     function safeSrc(path){
       // preserves special chars but encodes spaces
