--- a/book.html
+++ b/book.html
@@ -555,7 +555,11 @@
       .origin-card, .summary-card{ padding: 26px 16px; }
       .modal-body{ padding: 18px 14px 22px; }
       
-    }
+    .reader-view img{
+      max-width: 72vw;
+      max-height: 60vh;
+   }
+}
     .page-frame-outer {
     position: absolute;
     inset: 0;
