--- a/book.html
+++ b/book.html
@@ -1086,100 +1086,94 @@
   </div>
 
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-    /* ===== Utility: encode spaces safely in filenames ===== */
-    function safeSrc(path){
-      // preserves special chars but encodes spaces
-      return encodeURI(path);
-    }
+   document.addEventListener('DOMContentLoaded', () => {
 
-    /* ===== SECTION 3: Modals open/close ===== */
-    const openButtons = document.querySelectorAll('[data-open]');
-    const modals = document.querySelectorAll('.modal');
-
-    function closeAllModals(){
-      modals.forEach(m => m.classList.remove('open'));
-      document.body.style.overflow = '';
-    }
-
-    openButtons.forEach(btn => {
-      btn.addEventListener('click', () => {
-        const id = btn.getAttribute('data-open');
-        const modal = document.getElementById(id);
-        if(!modal) return;
-        closeAllModals();
-        modal.classList.add('open');
-        document.body.style.overflow = 'hidden';
-      });
-    });
-
-    modals.forEach(modal => {
-      modal.addEventListener('click', (e) => {
-        if(e.target === modal) closeAllModals();
-      });
-      const closeBtn = modal.querySelector('[data-close]');
-      if(closeBtn){
-        closeBtn.addEventListener('click', closeAllModals);
-      }
-    });
-
-    document.addEventListener('keydown', (e) => {
-      if(e.key === 'Escape') closeAllModals();
-/* ===== SECTION 5: Preview reader (LOCKED: cover first + keep exact filenames + folder path) ===== */
-    const pages = [
-      // Cover FIRST (locked)
-      'bookart/thebookcover.png',
-
-      // Preview pages (locked: keep names as-is; folder path locked)
-      'PanthersBookPreview/fore websited-images-0.jpg',
-      'PanthersBookPreview/fore websited-images-1.jpg',
-      'PanthersBookPreview/fore websited-images-2.jpg',
-      'PanthersBookPreview/fore websited-images-3.jpg',
-      'PanthersBookPreview/fore websited-images-4.jpg',
-      'PanthersBookPreview/fore websited-images-5.jpg',
-      'PanthersBookPreview/fore websited-images-6.jpg',
-      'PanthersBookPreview/fore websited-images-7.jpg',
-      'PanthersBookPreview/fore websited-images-8.jpg',
-      'PanthersBookPreview/fore websited-images-9.jpg',
-      'PanthersBookPreview/fore websited-images-10.jpg',
-      'PanthersBookPreview/fore websited-images-11.jpg',
-      'PanthersBookPreview/fore websited-images-12.jpg',
-      'PanthersBookPreview/fore websited-images-13.jpg',
-      'PanthersBookPreview/fore websited-images-14.jpg',
-      'PanthersBookPreview/fore websited-images-15.jpg'
-    ];
-pages.forEach(src => {
-  const img = new Image();
-  img.src = safeSrc(src);
-});
-      
-    });
-
-      
-// ===== BOOK CORE (STEP 4A — BASELINE) =====
-
-const reader = document.querySelector('.reader');
-const readerImg = document.getElementById('readerImg');
-
-let idx = 0;
-
-function render() {
-  const img = new Image();
-  img.onload = () => {
-    readerImg.src = img.src;
-  };
-  img.src = safeSrc(pages[idx]);
-}
-
-// TAP = NEXT PAGE ONLY
-readerImg.addEventListener('click', () => {
-  if (idx < pages.length - 1) {
-    idx++;
-  } else {
-    idx = 0;
+  /* ================== UTILITY ================== */
+  function safeSrc(path){
+    return encodeURI(path);
   }
+
+  /* ================== BIOS MODALS ================== */
+  const openButtons = document.querySelectorAll('[data-open]');
+  const modals = document.querySelectorAll('.modal');
+
+  function closeAllModals(){
+    modals.forEach(m => m.classList.remove('open'));
+    document.body.style.overflow = '';
+  }
+
+  openButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const id = btn.getAttribute('data-open');
+      const modal = document.getElementById(id);
+      if(!modal) return;
+      closeAllModals();
+      modal.classList.add('open');
+      document.body.style.overflow = 'hidden';
+    });
+  });
+
+  modals.forEach(modal => {
+    modal.addEventListener('click', (e) => {
+      if(e.target === modal) closeAllModals();
+    });
+    const closeBtn = modal.querySelector('[data-close]');
+    if(closeBtn){
+      closeBtn.addEventListener('click', closeAllModals);
+    }
+  });
+
+  document.addEventListener('keydown', (e) => {
+    if(e.key === 'Escape') closeAllModals();
+  });
+
+  /* ================== BOOK PAGES ================== */
+  const pages = [
+    'bookart/thebookcover.png',
+    'PanthersBookPreview/fore websited-images-0.jpg',
+    'PanthersBookPreview/fore websited-images-1.jpg',
+    'PanthersBookPreview/fore websited-images-2.jpg',
+    'PanthersBookPreview/fore websited-images-3.jpg',
+    'PanthersBookPreview/fore websited-images-4.jpg',
+    'PanthersBookPreview/fore websited-images-5.jpg',
+    'PanthersBookPreview/fore websited-images-6.jpg',
+    'PanthersBookPreview/fore websited-images-7.jpg',
+    'PanthersBookPreview/fore websited-images-8.jpg',
+    'PanthersBookPreview/fore websited-images-9.jpg',
+    'PanthersBookPreview/fore websited-images-10.jpg',
+    'PanthersBookPreview/fore websited-images-11.jpg',
+    'PanthersBookPreview/fore websited-images-12.jpg',
+    'PanthersBookPreview/fore websited-images-13.jpg',
+    'PanthersBookPreview/fore websited-images-14.jpg',
+    'PanthersBookPreview/fore websited-images-15.jpg'
+  ];
+
+  pages.forEach(src => {
+    const img = new Image();
+    img.src = safeSrc(src);
+  });
+
+  /* ================== BOOK CORE (BASELINE) ================== */
+  const readerImg = document.getElementById('readerImg');
+  let idx = 0;
+
+  function render(){
+    const img = new Image();
+    img.onload = () => {
+      readerImg.src = img.src;
+    };
+    img.src = safeSrc(pages[idx]);
+  }
+
+  readerImg.addEventListener('click', () => {
+    idx = (idx + 1) % pages.length;
+    render();
+  });
+
   render();
+
 });
+
 
 // INIT
 render();
