--- a/about.html
+++ b/about.html
@@ -190,6 +190,26 @@ body {
         letter-spacing:0.3em;
     }
 }
+  /* ================= FOOTER SOCIAL TABS ================= */
+.footer-socials a {
+    display:inline-block;
+    padding:14px 22px;
+    border:1px solid rgba(212,175,55,0.55);
+    border-radius:6px;
+    background:rgba(0,0,0,0.6);
+    color:#e8e4d8;
+    font-size:0.75rem;
+    letter-spacing:0.28em;
+    text-transform:uppercase;
+    transition:all 0.25s ease;
+}
+
+.footer-socials a:hover {
+    background:rgba(212,175,55,0.12);
+    color:#f3d688;
+    border-color:rgba(212,175,55,0.9);
+}
+  
 </style>
 </head>
 
@@ -218,9 +238,16 @@ body {
 
 <div class="page-frame-inner">
 
+<section class="about-banner">
+    <img src="bookart/aboutbanner.png" alt="EPÒK — Survive. Rise. Become.">
+</section>
+
 <section class="about-mission">
 
+<p>Message from the CEO</p>
+    
 <p>EPÒK was created from a moment most people avoid.</p>
+
 
 <p>
 A moment of clarity.<br>
@@ -318,6 +345,9 @@ It is a process.
 And when you are ready to stop negotiating with the version of yourself that plays small —
 <br><br>
 you step into your EPÒK.
+
+                                                          </p>I Survive, I Rise, I Become,</p>
+                                                                       </p>Micheal Pierson</p>
 </p>
 
 </section>
@@ -329,6 +359,8 @@ you step into your EPÒK.
         <a href="https://www.tiktok.com/@epok.official" target="_blank">TikTok</a>
         <a href="https://youtube.com/@epokofficial-x2w" target="_blank">YouTube</a>
         <a href="https://www.facebook.com/profile.php?id=61584503914034" target="_blank">Facebook</a>
+        </p>
+        </p>
     </div>
     <div class="footer-mark">© EPÒK</div>
 </footer>
