--- a/about.html
+++ b/about.html
@@ -209,7 +209,18 @@ body {
     color:#f3d688;
     border-color:rgba(212,175,55,0.9);
 }
-  
+ /* ================= ABOUT BANNER CENTERING ================= */
+.about-banner {
+    display:flex;
+    justify-content:center;
+}
+
+.about-banner img {
+    width:100%;
+    max-width:1600px;
+    display:block;
+}
+ 
 </style>
 </head>
 
