--- a/about.html
+++ b/about.html
@@ -220,7 +220,12 @@ body {
     max-width:1600px;
     display:block;
 }
- 
+ /* ================= ABOUT BANNER HEIGHT CONTROL ================= */
+.about-banner img {
+    max-height: 340px;
+    object-fit: contain;
+}
+
 </style>
 </head>
 
