--- a/about.html
+++ b/about.html
@@ -220,10 +220,14 @@ body {
     max-width:1600px;
     display:block;
 }
- /* ================= ABOUT BANNER HEIGHT CONTROL ================= */
-.about-banner img {
-    max-height: 340px;
-    object-fit: contain;
+/* ================= SPACE BETWEEN FIXED NAV AND ABOUT BANNER ================= */
+.about-banner {
+    margin-top: 90px;
+}
+@media (max-width:768px) {
+    .about-banner {
+        margin-top: 80px;
+    }
 }
 
 </style>
