--- a/home.html
+++ b/home.html
@@ -204,6 +204,212 @@ body {
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EPÒK</title>
+
+<style>
+* { margin:0; padding:0; box-sizing:border-box; }
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    background:#000;
+    color:#f2f2f2;
+    overflow-x:hidden;
+}
+
+/* ================= TOP NAV ================= */
+.top-nav {
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:64px;
+    display:flex;
+    align-items:center;
+    background:rgba(0,0,0,0.88);
+    backdrop-filter:blur(10px);
+    z-index:1000;
+    border-bottom:1px solid rgba(212,175,55,0.25);
+}
+
+.nav-scroll {
+    width:100%;
+    overflow-x:auto;
+    white-space:nowrap;
+    padding:0 6vw;
+}
+
+.nav-scroll::-webkit-scrollbar { height:0; }
+.nav-scroll { scrollbar-width:none; }
+
+.nav-links {
+    display:inline-flex;
+    gap:26px;
+    align-items:center;
+}
+
+.nav-links a {
+    text-decoration:none;
+    color:#e8e4d8;
+    font-size:0.82rem;
+    letter-spacing:0.22em;
+    text-transform:uppercase;
+    padding:8px 4px;
+    opacity:0.85;
+}
+
+.nav-links a:hover {
+    color:#f3d688;
+    opacity:1;
+}
+
+.nav-links a.featured {
+    opacity:1;
+    border:1px solid rgba(212,175,55,0.85);
+    padding:8px 12px;
+    color:#f3d688;
+}
+
+/* ============ DOUBLE ROYAL FRAME (FULL PAGE) ============ */
+.page-frame-outer {
+    min-height:100vh;
+    padding:22px;
+    background:#000;
+    border:2px solid rgba(212,175,55,0.65);
+    position:relative;
+    overflow:hidden;
+}
+
+/* LEFT & RIGHT VERTICAL INSCRIPTIONS */
+.page-frame-outer::before,
+.page-frame-outer::after {
+    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
+    position:absolute;
+    top:22px;
+    bottom:22px;
+    width:22px;
+    writing-mode:vertical-rl;
+    text-orientation:mixed;
+    font-size:0.65rem;
+    letter-spacing:0.35em;
+    color:#ffffff;
+    pointer-events:none;
+    white-space:nowrap;
+}
+
+.page-frame-outer::before {
+    left:1px;
+    animation:leftScroll 45s linear infinite;
+}
+
+.page-frame-outer::after {
+    right:9px;
+    animation:rightScroll 45s linear infinite;
+}
+
+@keyframes leftScroll {
+    from { transform:translateY(100%); }
+    to   { transform:translateY(-100%); }
+}
+
+@keyframes rightScroll {
+    from { transform:translateY(-100%); }
+    to   { transform:translateY(100%); }
+}
+
+/* BOTTOM ARABIC INSCRIPTION */
+.page-frame-outer .arabic-border {
+    position:absolute;
+    bottom:6px;
+    left:0;
+    right:0;
+    text-align:center;
+    font-size:0.7rem;
+    letter-spacing:0.45em;
+    color:#ffffff;
+    pointer-events:none;
+    white-space:nowrap;
+    overflow:hidden;
+}
+
+.page-frame-outer .arabic-border span {
+    display:inline-block;
+    padding-left:100%;
+    animation:arabic-scroll 18s linear infinite;
+}
+
+@keyframes arabic-scroll {
+    from { transform:translateX(0); }
+    to { transform:translateX(-100%); }
+}
+
+/* INNER FRAME */
+.page-frame-inner {
+    min-height:100vh;
+    padding:96px 6vw 140px;
+    border:1px solid rgba(212,175,55,0.35);
+    box-shadow:
+        inset 0 0 0 1px rgba(212,175,55,0.18),
+        0 40px 120px rgba(0,0,0,0.95);
+    background:#000;
+}
+
+/* ================= MOBILE ================= */
+@media (max-width:768px) {
+    .page-frame-inner {
+        padding:96px 3vw 120px;
+    }
+
+    .page-frame-outer::before,
+    .page-frame-outer::after {
+        font-size:0.55rem;
+        letter-spacing:0.3em;
+    }
+
+    .page-frame-outer .arabic-border {
+        font-size:0.6rem;
+        letter-spacing:0.3em;
+    }
+}
+</style>
+</head>
+
+<body>
+
+<nav class="top-nav">
+    <div class="nav-scroll">
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="movement.html">Movement</a>
+            <a href="patchbaby.html">Patch Baby</a>
+            <a href="book.html">The Book</a>
+            <a href="store.html">Store</a>
+            <a href="checkout.html">Checkout</a>
+            <a href="about.html">About</a>
+            <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
+        </div>
+    </div>
+</nav>
+
+<div class="page-frame-outer">
+
+    <div class="arabic-border">
+        <span>قَ على قيد الحياة. انهض. كن. ادخل إلى عالم إيبوك الخاص بك • قَ على قيد الحياة. انهض. كن. ادخل إلى عالم إيبوك الخاص بك • </span>
+    </div>
+
+    <div class="page-frame-inner">
+
+        <!-- PAGE CONTENT GOES HERE -->
+
+    </div>
+</div>
+
+</body>
+</html>
 
 
     /* ============= 1. EPÒK MOVEMENT INTRO ============= */
